kubero/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami
 namespace: whoami
 annotations:
   cert-manager.io/issuer: "le-example-http"
   traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
 tls:
   - hosts:
       - whoami.3756home.org
     secretName: tls-whoami-ingress-http
 rules:
   - host: whoami.3756home.org
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
